[gd_scene load_steps=6 format=3 uid="uid://d28pmsx4nfriv"]

[ext_resource type="Script" path="res://scripts/teaMakingPanel.gd" id="1_8qrfq"]
[ext_resource type="Texture2D" uid="uid://biv7nh7ehpe04" path="res://textures/sprites/dialogue box panel.png" id="1_gbybq"]
[ext_resource type="Texture2D" uid="uid://duofr7exc0k4r" path="res://textures/Dialogue box adjusted.png" id="3_wdxjn"]

[sub_resource type="LabelSettings" id="LabelSettings_i5c7h"]
font_size = 24
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vtd48"]
font_size = 20

[node name="TeaMakingPanel" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 300.0
offset_right = 425.0
offset_bottom = 600.0
grow_vertical = 0
script = ExtResource("1_8qrfq")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.4, 0, 0.6)
position = Vector2(217, 130)
scale = Vector2(0.45, 2)
texture = ExtResource("1_gbybq")

[node name="Instructions" type="Label" parent="."]
layout_mode = 0
offset_top = -40.0
offset_right = 425.0
offset_bottom = 20.0
text = "Mix together 2 packets of tea and 1 extra ingredient from the machine to balance the flavor profile."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Warning" type="Label" parent="."]
visible = false
modulate = Color(1, 0.639216, 0.388235, 1)
layout_mode = 0
offset_top = 200.0
offset_right = 425.0
offset_bottom = 230.0
text = "You cannot add any more tea packets!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Flavor" type="Control" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_right = 230.0
offset_bottom = 60.0

[node name="FlavorSlider" type="HSlider" parent="Flavor"]
layout_mode = 2
offset_top = 40.0
offset_right = 300.0
offset_bottom = 70.0
mouse_filter = 2
min_value = -5.0
max_value = 5.0
scrollable = false

[node name="Label" type="Label" parent="Flavor"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 50.0
text = "Mild                                                Intense"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FlavorValue" type="Label" parent="Flavor"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_left = 325.0
offset_top = 35.0
offset_right = 365.0
offset_bottom = 75.0
text = "0
"
label_settings = SubResource("LabelSettings_i5c7h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sweetness" type="Control" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_right = 230.0
offset_bottom = 60.0

[node name="SweetnessSlider" type="HSlider" parent="Sweetness"]
layout_mode = 2
offset_top = 100.0
offset_right = 300.0
offset_bottom = 130.0
mouse_filter = 2
min_value = -5.0
max_value = 5.0
scrollable = false

[node name="Label" type="Label" parent="Sweetness"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_top = 70.0
offset_right = 300.0
offset_bottom = 110.0
text = "Bitter                                                  Sweet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SweetnessValue" type="Label" parent="Sweetness"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_left = 325.0
offset_top = 95.0
offset_right = 365.0
offset_bottom = 135.0
text = "0
"
label_settings = SubResource("LabelSettings_i5c7h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Herbaceousness" type="Control" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_right = 230.0
offset_bottom = 60.0

[node name="HerbaceousnessSlider" type="HSlider" parent="Herbaceousness"]
layout_mode = 2
offset_top = 160.0
offset_right = 300.0
offset_bottom = 190.0
mouse_filter = 2
min_value = -5.0
max_value = 5.0

[node name="Label" type="Label" parent="Herbaceousness"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_top = 130.0
offset_right = 302.0
offset_bottom = 170.0
text = "Floral                                        Herbaceous"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HerbaceousnessValue" type="Label" parent="Herbaceousness"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_left = 325.0
offset_top = 155.0
offset_right = 365.0
offset_bottom = 195.0
text = "0
"
label_settings = SubResource("LabelSettings_i5c7h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="Restart" type="TextureButton" parent="."]
custom_minimum_size = Vector2(200, 50)
offset_left = -10.0
offset_top = 250.0
offset_right = 190.0
offset_bottom = 300.0
texture_normal = ExtResource("3_wdxjn")
stretch_mode = 0

[node name="Label" type="Label" parent="Restart"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Restart The Mix"
label_settings = SubResource("LabelSettings_vtd48")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Confirm" type="TextureButton" parent="."]
custom_minimum_size = Vector2(200, 50)
offset_left = 240.0
offset_top = 250.0
offset_right = 440.0
offset_bottom = 300.0
texture_normal = ExtResource("3_wdxjn")
stretch_mode = 0

[node name="Label" type="Label" parent="Confirm"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Confirm Brewing"
label_settings = SubResource("LabelSettings_vtd48")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="WarningDisplayTimer" to="." method="_on_warning_display_timer_timeout"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
